--- a/src/faq.html
+++ b/src/faq.html
@@ -21,44 +21,73 @@
 
     <nav class="navbar">
         <div class="navbar__top">
-            <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
+            <div class="navbar__inner">
+                <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
+            </div>
         </div>
         <div class="navbar__bottom">
-            <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
-            <input class="burger-btn" type="checkbox" id="burger-btn" />
-            <label class="burger-label" for="burger-btn">
-                <span class="bar top"></span>
-                <span class="bar middle"></span>
-                <span class="bar bottom"></span>
-            </label>
-            <ul class="navbar__bottom__nav">
-                <li class="nav-item"><a href="house.html" class="nav-link">House</a></li>
-                <li class="nav-item"><a href="business.html" class="nav-link">Business</a></li>
-                <li class="nav-item"><a href="student.html" class="nav-link">Student</a></li>
-                <li class="nav-item"><a href="packing.html" class="nav-link">Packing Supplies</a></li>
-                <li class="nav-item"><a href="faq.html" class="nav-link">FAQ's</a></li>
-            </ul>
+            <div class="navbar__inner">
+                <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg"
+                        alt="Company Logo"></a>
+                <input class="burger-btn" type="checkbox" id="burger-btn" />
+                <label class="burger-label" for="burger-btn">
+                    <span class="bar top"></span>
+                    <span class="bar middle"></span>
+                    <span class="bar bottom"></span>
+                </label>
+                <ul class="navbar__bottom__nav">
+                    <li class="nav-item"><a href="house.html" class="nav-link">House</a></li>
+                    <li class="nav-item"><a href="business.html" class="nav-link">Business</a></li>
+                    <li class="nav-item"><a href="student.html" class="nav-link">Student</a></li>
+                    <li class="nav-item"><a href="packing.html" class="nav-link">Packing Supplies</a></li>
+                    <li class="nav-item"><a href="faq.html" class="nav-link">FAQ's</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
     <div class="faq">
-        <h1>Frequently Asked Questions</h1>
-        <ul id="accordian" class="accordian">
-            <li class="question">Question 1</li>
-            <li class="answer">Answer 1</li>
-            <li class="question">Question 2</li>
-            <li class="answer">Answer 2</li>
-            <li class="question">Question 3</li>
-            <li class="answer">Answer 3</li>
-            <li class="question">Question 4</li>
-            <li class="answer">Answer 4</li>
-            <li class="question">Question 5</li>
-            <li class="answer">Answer 5</li>
-            <li class="question">Question 6</li>
-            <li class="answer">Answer 6</li>
-            <li class="question">Question 7</li>
-            <li class="answer">Answer 7</li>
-        </ul>
+        <div class="faq__inner">
+            <h1>FAQ's</h1>
+            <ul id="accordian" class="accordian">
+                <li class="question">What is self storage?</li>
+                <li class="answer">Self storage is shorthand for ‘self-service storage’. It can mean any space – such as
+                    a
+                    room, locker or unit – that you can rent on a short or long-term basis to securely store your
+                    possessions in.</li>
+                <li class="question">How do I pay for my storage?</li>
+                <li class="answer">We offer a number of payment options – you can spread the cost with a monthly Direct
+                    Debit, or make payments using your credit card, debit card or bank transfer.</li>
+                <li class="question">What are the opening hours?</li>
+                <li class="answer">
+                    <p>Our reception opening hours are:</p>
+                    <ul>
+                        <li>08.30-18.00 Monday to Friday</li>
+                        <li>08.30-17.00 Saturday</li>
+                        <li>10.00-16.00 Sunday</li>
+                    </ul>
+                    <p>We offer free 24 hour access to your storage unit.
+                        page for more information.</p>
+                </li>
+                <li class="question">Is there parking on site?</li>
+                <li class="answer">Yes. We offer on site parking spaces for all customers.</li>
+                <li class="question">Does the facility have trolleys available?</li>
+                <li class="answer">Yes. We have trollies available at our facility. We also provide pallet trucks and
+                    forklifting services.</li>
+                <li class="question">Does the facility have lifts?</li>
+                <li class="answer">Yes. Our facility has two lifts. If you have any mobility issues, please
+                    ask a member of staff about ground floor units.</li>
+                <li class="question">How secure is my unit?</li>
+                <li class="answer">Our premises are described as being of a fortress build with all access fortified.
+                    Units
+                    are made from steel and we have fire and theft precautions in place for added protection. You have
+                    responsibility to ensure you keep your unit locked. CCTV is also in operation on site, as well as
+                    fob
+                    activated secure access and the premises have a monitored security alarm. We have full control of
+                    our
+                    perimeter fence and building as we do not share our premises with another company.</li>
+            </ul>
+        </div>
     </div>
 
 
@@ -131,7 +160,7 @@
 
 
 
-    <button id="btn-to-top" class="btn-to-top">&#94;</button>
+    <button id="btn-to-top" class="btn btn-to-top">&#94;</button>
 
 
 
