--- a/src/house.html
+++ b/src/house.html
@@ -21,23 +21,28 @@
 
     <nav class="navbar">
         <div class="navbar__top">
-            <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
+            <div class="navbar__inner">
+                <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
+            </div>
         </div>
         <div class="navbar__bottom">
-            <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
-            <input class="burger-btn" type="checkbox" id="burger-btn" />
-            <label class="burger-label" for="burger-btn">
-                <span class="bar top"></span>
-                <span class="bar middle"></span>
-                <span class="bar bottom"></span>
-            </label>
-            <ul class="navbar__bottom__nav">
-                <li class="nav-item"><a href="house.html" class="nav-link">House</a></li>
-                <li class="nav-item"><a href="business.html" class="nav-link">Business</a></li>
-                <li class="nav-item"><a href="student.html" class="nav-link">Student</a></li>
-                <li class="nav-item"><a href="packing.html" class="nav-link">Packing Supplies</a></li>
-                <li class="nav-item"><a href="faq.html" class="nav-link">FAQ's</a></li>
-            </ul>
+            <div class="navbar__inner">
+                <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg"
+                        alt="Company Logo"></a>
+                <input class="burger-btn" type="checkbox" id="burger-btn" />
+                <label class="burger-label" for="burger-btn">
+                    <span class="bar top"></span>
+                    <span class="bar middle"></span>
+                    <span class="bar bottom"></span>
+                </label>
+                <ul class="navbar__bottom__nav">
+                    <li class="nav-item"><a href="house.html" class="nav-link">House</a></li>
+                    <li class="nav-item"><a href="business.html" class="nav-link">Business</a></li>
+                    <li class="nav-item"><a href="student.html" class="nav-link">Student</a></li>
+                    <li class="nav-item"><a href="packing.html" class="nav-link">Packing Supplies</a></li>
+                    <li class="nav-item"><a href="faq.html" class="nav-link">FAQ's</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -45,16 +50,14 @@
         <div class="storage__inner">
             <div class="storage__inner__info">
                 <h1>Household Storage</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-                    voluptate quod!Consequuntur? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam
-                    cupiditate
-                    voluptatum similique. Architecto sunt, mollitia iure obcaecati harum, dolorem neque consequuntur
-                    atque
-                    aliquid cupiditate at quidem, ipsa beatae eaque dolore.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-                    voluptatequod!Consequuntur?</p>
+                <p>At Storage Company, we provide a wide range of secure self storage units for household customers.
+                    Our promise to always be the cheapest means you’ll always get a great rate, and
+                    our flexible approach means that you can store with us for as little as one week. You can also
+                    change your storage unit size whenever you need to. Give us a call and talk to our friendly
+                    experts to find the right storage solution for you.</p>
+                <p>We have a fully accessible building with ground floor level-access and 1st floor with stairs & lift
+                    access. We have toilets & refreshments on site as well as free parking, free use of trolleys and
+                    free wifi access.</p>
             </div>
             <div class="storage__inner__img"></div>
         </div>
@@ -66,37 +69,26 @@
             <p>Why we are the best place for your possessions...</p>
             <div class="why-us__inner__lists">
                 <ul>
-                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
-                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
-                        repellat id?</li>
-                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
-                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
-                        repellat id?</li>
-                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
-                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
-                        repellat id?</li>
+                    <li>No long-term contracts, pay monthly</li>
+                    <li>Flexible options to suit your needs</li>
+                    <li>Unbeatable service at the best prices </li>
                 </ul>
                 <ul>
-                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
-                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
-                        repellat id?</li>
-                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
-                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
-                        repellat id?</li>
-                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
-                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
-                        repellat id?</li>
+                    <li>24-hour access to storage units</li>
+                    <li>Convenient and accessible location</li>
+                    <li>Secure fob entry system and CCTV monitoring</li>
                 </ul>
             </div>
         </div>
     </div>
 
     <div class="access">
-        <h3>Fully Secure Self-Storage</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-            voluptatequod!Consequuntur?</p>
-        <p>Unlimited access to your goods during our Opening Hours:</p>
+        <h3>Pop In, Anytime</h3>
+        <p>
+            <p>You can access your unit at any time, day or night, 7 days a week using the FOB provided upon sign up.
+            </p>
+        </p>
+        <p>Office Opening Hours:</p>
         <ul>
             <li>Mon to Fri 8.30am to 6pm</li>
             <li>Sat 9.00am to 4pm</li>
@@ -110,53 +102,32 @@
                 <img src="/src/images/1.jpg" alt="">
             </div>
             <div class="flexible__inner__info">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-                    voluptatequod!Consequuntur?</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-                    voluptatequod!Consequuntur?</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-                    voluptatequod!Consequuntur?</p>
+                <p>With a minimum term from just one week, you can stay as long as you like. Don't feel under pressure
+                    to commit to long term contracts. Self storage is about flexibility for you, to store as you need,
+                    for the time period you require.</p>
+                <p>Don't pay for more space than you need. We will put you into the smallest unit possible to fit your
+                    belongings, that way you can be sure you are not overpaying for your requirement.</p>
+                <p>If you find you need more space than you started with, just say the word and we’ll upgrade you to a
+                    bigger unit. Similarly, if you want to reduce the size of your storage unit (and your monthly bill)
+                    we’re ready to accommodate you, in person, online or at the end of the phone.</p>
             </div>
         </div>
     </div>
 
     <div class="security">
         <h3>Security</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-            voluptatequod!Consequuntur?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
-            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
-            voluptatequod!Consequuntur?</p>
+        <p>Here at Storage Company we take security seriously. Your belongings are securely stored at all times in a
+            fortified premises monitored by CCTV, intruder alarm, fire detection systems.</p>
+        <p>We have staff on site at our facility, seven days a week during office opening hours. As well as
+            helping to make your life easier, they're fully trained to spot – and react to – any suspicious behaviour or
+            activity identified, creating another layer of safety.</p>
     </div>
 
     <div class="quote">
         <h3>Looking for space?</h3>
         <p>We offer a wide range of sizes</p>
-        <button><a href="quote.html">Quote</a></button>
+        <a class="btn" href="quote.html">Quote</a>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <footer class=footer>
         <div class="footer__top">
@@ -205,20 +176,7 @@
         </div>
     </footer>
 
-
-
-
-
-
-    <button id="btn-to-top" class="btn-to-top">&#94;</button>
-
-
-
-
-
-
-
-
+    <button id="btn-to-top" class="btn btn-to-top">&#94;</button>
 
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
