--- a/src/index.html
+++ b/src/index.html
@@ -21,23 +21,28 @@
 
     <nav class="navbar">
         <div class="navbar__top">
-            <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
+            <div class="navbar__inner">
+                <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
+            </div>
         </div>
         <div class="navbar__bottom">
-            <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
-            <input class="burger-btn" type="checkbox" id="burger-btn" />
-            <label class="burger-label" for="burger-btn">
-                <span class="bar top"></span>
-                <span class="bar middle"></span>
-                <span class="bar bottom"></span>
-            </label>
-            <ul class="navbar__bottom__nav">
-                <li class="nav-item"><a href="house.html" class="nav-link">House</a></li>
-                <li class="nav-item"><a href="business.html" class="nav-link">Business</a></li>
-                <li class="nav-item"><a href="student.html" class="nav-link">Student</a></li>
-                <li class="nav-item"><a href="packing.html" class="nav-link">Packing Supplies</a></li>
-                <li class="nav-item"><a href="faq.html" class="nav-link">FAQ's</a></li>
-            </ul>
+            <div class="navbar__inner">
+                <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg"
+                        alt="Company Logo"></a>
+                <input class="burger-btn" type="checkbox" id="burger-btn" />
+                <label class="burger-label" for="burger-btn">
+                    <span class="bar top"></span>
+                    <span class="bar middle"></span>
+                    <span class="bar bottom"></span>
+                </label>
+                <ul class="navbar__bottom__nav">
+                    <li class="nav-item"><a href="house.html" class="nav-link">House</a></li>
+                    <li class="nav-item"><a href="business.html" class="nav-link">Business</a></li>
+                    <li class="nav-item"><a href="student.html" class="nav-link">Student</a></li>
+                    <li class="nav-item"><a href="packing.html" class="nav-link">Packing Supplies</a></li>
+                    <li class="nav-item"><a href="faq.html" class="nav-link">FAQ's</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -46,7 +51,7 @@
             <h1 class="header-top">Storage</h1>
             <h1 class="header-middle">Made</h1>
             <h1 class="header-bottom">Easy</h1>
-            <button class="btn-large"><a href="quote.html">Get my free quote</a></button>
+            <a class="btn btn-large" href="quote.html">Get my free quote</a>
         </div>
     </header>
 
@@ -59,8 +64,8 @@
                     </div>
                     <div class="card__caption">
                         <h3 class="card__caption__header">House Storage</h3>
-                        <p class="card__caption__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Necessitatibus delectus, ea sapiente.</p>
+                        <p class="card__caption__text">Whether you're making space at home, storing furniture or moving
+                            house, we have a secure storage unit to suit your needs.</p>
                     </div>
                 </a>
             </div>
@@ -71,8 +76,8 @@
                     </div>
                     <div class="card__caption">
                         <h3 class="card__caption__header">Business Storage</h3>
-                        <p class="card__caption__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Necessitatibus delectus, ea sapiente.</p>
+                        <p class="card__caption__text">No matter your company's size or requirements, we can support you
+                            with the business services you need at a price that's right.</p>
                     </div>
                 </a>
             </div>
@@ -83,8 +88,8 @@
                     </div>
                     <div class="card__caption">
                         <h3 class="card__caption__header">Student Storage</h3>
-                        <p class="card__caption__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Necessitatibus delectus, ea sapiente.</p>
+                        <p class="card__caption__text">If you’re moving out of your student accommodation
+                            for a while, we can help you store it - at unbeatable prices.</p>
                     </div>
                 </a>
             </div>
@@ -95,8 +100,8 @@
                     </div>
                     <div class="card__caption">
                         <h3 class="card__caption__header">Packing Supplies</h3>
-                        <p class="card__caption__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Necessitatibus delectus, ea sapiente.</p>
+                        <p class="card__caption__text">Make sure that all your belongings are protected whether you are
+                            putting them in storage or simply moving house.</p>
                     </div>
                 </a>
             </div>
@@ -149,10 +154,48 @@
                 <p>We strive to make storing your valued possessions simple and easy, which is why we offer convenient
                     storage solutions for every need, at a price you’ll love.</p>
                 <p>Whether you need a self storage unit for storing household, business or student items, you’ll find
-                    exactly what you need at Safestore. With 125 storage locations across the country, there’s bound to
-                    be Safestore self storage facility near you. You can stay for as long as you want; we offer 50% off
+                    exactly what you need at Storage Company. You can stay for as long as you want; we offer 50% off
                     for up to 8 weeks for short term storage, or 20% discount on any long term storage. Get a free quote
                     today.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="size-guide">
+        <div class="size-guide__inner">
+            <div class="size-guide__panes">
+                <div id="pane-one" class="pane pane-active">
+                    <img src="/src/images/5x5.png" alt="">
+                </div>
+                <div id="pane-two" class="pane">
+                    <img src="/src/images/5x10.png" alt="">
+                </div>
+                <div id="pane-three" class="pane">
+                    <img src="/src/images/7.5x10.png" alt="">
+                </div>
+                <div id="pane-four" class="pane">
+                    <img src="/src/images/10x10.png" alt="">
+                </div>
+                <div id="pane-five" class="pane">
+                    <img src="/src/images/10x15.png" alt="">
+                </div>
+                <div id="pane-six" class="pane">
+                    <img src="/src/images/10x20.png" alt="">
+                </div>
+                <div id="pane-seven" class="pane">
+                    <img src="/src/images/10x30.png" alt="">
+                </div>
+            </div>
+            <div class="size-guide__tabs">
+                <ul id="tab-nav">
+                    <li><a href="#tab-one">25 square feet</a></li>
+                    <li><a href="#tab-two">50 square feet</a></li>
+                    <li><a href="#tab-three">75 square feet</a></li>
+                    <li><a href="#tab-four">100 square feet</a></li>
+                    <li><a href="#tab-five">115 square feet</a></li>
+                    <li><a href="#tab-six">120 square feet</a></li>
+                    <li><a href="#tab-seven">130 square feet</a></li>
+                </ul>
             </div>
         </div>
     </div>
@@ -204,7 +247,7 @@
         </div>
     </footer>
 
-    <button id="btn-to-top" class="btn-to-top">&#94;</button>
+    <button id="btn-to-top" class="btn btn-to-top">&#94;</button>
 
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
