--- a/src/packing.html
+++ b/src/packing.html
@@ -21,23 +21,28 @@
 
     <nav class="navbar">
         <div class="navbar__top">
-            <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
+            <div class="navbar__inner">
+                <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
+            </div>
         </div>
         <div class="navbar__bottom">
-            <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
-            <input class="burger-btn" type="checkbox" id="burger-btn" />
-            <label class="burger-label" for="burger-btn">
-                <span class="bar top"></span>
-                <span class="bar middle"></span>
-                <span class="bar bottom"></span>
-            </label>
-            <ul class="navbar__bottom__nav">
-                <li class="nav-item"><a href="house.html" class="nav-link">House</a></li>
-                <li class="nav-item"><a href="business.html" class="nav-link">Business</a></li>
-                <li class="nav-item"><a href="student.html" class="nav-link">Student</a></li>
-                <li class="nav-item"><a href="packing.html" class="nav-link">Packing Supplies</a></li>
-                <li class="nav-item"><a href="faq.html" class="nav-link">FAQ's</a></li>
-            </ul>
+            <div class="navbar__inner">
+                <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg"
+                        alt="Company Logo"></a>
+                <input class="burger-btn" type="checkbox" id="burger-btn" />
+                <label class="burger-label" for="burger-btn">
+                    <span class="bar top"></span>
+                    <span class="bar middle"></span>
+                    <span class="bar bottom"></span>
+                </label>
+                <ul class="navbar__bottom__nav">
+                    <li class="nav-item"><a href="house.html" class="nav-link">House</a></li>
+                    <li class="nav-item"><a href="business.html" class="nav-link">Business</a></li>
+                    <li class="nav-item"><a href="student.html" class="nav-link">Student</a></li>
+                    <li class="nav-item"><a href="packing.html" class="nav-link">Packing Supplies</a></li>
+                    <li class="nav-item"><a href="faq.html" class="nav-link">FAQ's</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
@@ -187,7 +192,7 @@
 
 
 
-    <button id="btn-to-top" class="btn-to-top">&#94;</button>
+    <button id="btn-to-top" class="btn btn-to-top">&#94;</button>
 
 
 
