--- a/src/contact.html
+++ b/src/contact.html
@@ -65,7 +65,7 @@
                     <label for="">Message</label>
                     <textarea name="" id="" cols="30" rows="10"></textarea>
 
-                    <button type="submit">Submit</button>
+                    <button class="btn" type="submit">Submit</button>
                 </form>
             </div>
             <div class="contact-info">
@@ -76,13 +76,6 @@
     </div>
 
     <div class="contact-map"></div>
-
-
-
-
-
-
-
 
     <footer class="footer">
         <div class="footer__top">
@@ -131,7 +124,7 @@
         </div>
     </footer>
 
-    <button id="btn-to-top" class="btn-to-top">&#94;</button>
+    <button id="btn-to-top" class="btn btn-to-top">&#94;</button>
 
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
